update login, images file, Multilingual 2