@@ -3,7 +3,9 @@ package com.tranv.d7shop.controller;
 import com.tranv.d7shop.components.LocalizationUtils;
 import com.tranv.d7shop.dtos.UserDTO;
 import com.tranv.d7shop.dtos.UserLoginDTO;
+import com.tranv.d7shop.models.User;
 import com.tranv.d7shop.reponse.LoginRepose;
+import com.tranv.d7shop.reponse.RegisterRepose;
 import com.tranv.d7shop.services.IUserService;
 import com.tranv.d7shop.utils.MessageKeys;
 import jakarta.validation.Valid;
@@ -17,7 +19,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("${api.prefix}/users")
@@ -27,34 +29,42 @@ public class UserController {
     private final LocalizationUtils localizationUtils;
 
     @PostMapping("/register")
-    public ResponseEntity<?> createUser(
+    public ResponseEntity<RegisterRepose> createUser(
             @Valid @RequestBody UserDTO userDTO,
             BindingResult bindingResult) {
-
+        RegisterRepose registerRepose = new RegisterRepose();
         try {
             if (bindingResult.hasErrors()) {
                 List<String> errorMessage = bindingResult.getFieldErrors()
                         .stream()
                         .map(FieldError::getDefaultMessage)
-                        .collect(Collectors.toList());
-                return ResponseEntity.badRequest().body(errorMessage);
+                        .toList();
+                registerRepose.setMessage(errorMessage.toString());
+                return ResponseEntity.badRequest().body(registerRepose);
             }
-            if (!userDTO.getPassword().equals(userDTO.getRetypePassword())){
-                return ResponseEntity.badRequest().body(localizationUtils.getLocalizedMessage(
-                        MessageKeys.PASSWORD_NOT_MATCH
-                ));
+            if (!userDTO.getPassword().equals(userDTO.getRetypePassword())) {
+                registerRepose.setMessage(localizationUtils.getLocalizedMessage(
+                        MessageKeys.PASSWORD_NOT_MATCH));
+                return ResponseEntity.badRequest().body(registerRepose);
             }
-            userService.createUser(userDTO);
-            return ResponseEntity.ok("Successfully registered");
+            User user = userService.createUser(userDTO);
+            registerRepose.setMessage(localizationUtils.getLocalizedMessage(
+                    MessageKeys.REGISTER_SUCCESSFULLY));
+            registerRepose.setUser(user);
+            return ResponseEntity.ok(registerRepose);
         } catch (Exception e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
+            return ResponseEntity.badRequest().body(registerRepose);
         }
     }
 
     @PostMapping("/login")
     public ResponseEntity<LoginRepose> login(@Valid @RequestBody UserLoginDTO userLoginDTO) {
         try {
-            String token = userService.loginUser(userLoginDTO.getPhoneNumber(), userLoginDTO.getPassword());
+            String token = userService.loginUser(
+                    userLoginDTO.getPhoneNumber(),
+                    userLoginDTO.getPassword(),
+                    userLoginDTO.getRoleId()
+            );
 
             return ResponseEntity.ok(
                     LoginRepose.builder()
